--- a/css/style.css
+++ b/css/style.css
@@ -85,93 +85,59 @@ body {
   flex-direction: column;
 }
 
-.content {
-  flex: 1 1 auto;
-}
-
-.hi {
-  background-color: #445162;
-}
-
 .container {
   max-width: 1180px;
   margin: 0 auto;
 }
 
+.content {
+  flex: 1 1 auto;
+}
+
+.hi {
+  background: #445162;
+  height: 323px;
+}
+
 .hi__row {
   display: flex;
-  padding: 50px 0;
   justify-content: space-between;
+  padding: 50px 0 0 0;
 }
 
 .hi__body {
-  color: white;
-  padding: 0 20px 0 0;
+  padding: 0 5px 0 0;
+  color: #ffffff;
 }
 
 .hi__tittle {
   font-size: 60px;
-  line-height: 0.87;
+  line-height: 0.8;
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
-  margin-bottom: 38px;
+  word-spacing: 8px;
+  margin: 0 0 37px 0;
 }
 
-.hi__list li {
-  background: url(/img/hi/check_icon_347.png) 0 1px no-repeat;
-  padding: 0px 0 0 36px;
+.hi__subtite li {
   font-size: 20px;
-  line-height: 22px;
-  font-weight: 400;
-  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
-  margin: 0 0 15px 0;
-}
-
-.hi__list li:last-child {
-  margin: 0px;
-}
-
-.tittle {
-  font-size: 30px;
   line-height: 36px;
   font-weight: 400;
-  color: #445161;
+  text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.3);
+  padding: 0 0 0 37px;
+  position: relative;
 }
-
-.what {
-  padding: 50px 0;
-}
-
-.what__row {
-  display: flex;
-}
-
-.what__image {
-  flex: 0 0 430px;
-}
-
-.what__image img {
-  max-width: 430px;
-}
-
-.what__body {
-  flex: 1 1 auto;
-  padding: 0 0 0 38px;
-}
-
-.what__tittle {
-  margin: 0 0 33px 0;
-}
-
-.what__text p {
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-  color: #333333;
-  margin: 0 0 25px 0;
+.hi__subtite li::before {
+  content: " ";
+  width: 25px;
+  height: 19px;
+  position: absolute;
+  top: 8px;
+  left: 0;
+  background: url(/img/hi/check_icon_347.png) 50%/contain no-repeat;
 }
 
 .footer {
-  background-color: #f5f5f5;
+  background: #f5f5f5;
 }
 
 .footer__row {
@@ -183,7 +149,6 @@ body {
 
 .footer__text {
   font-size: 12px;
-  line-height: 24px;
   letter-spacing: 0.025em;
   color: #445162;
 }
